@@ -1,3 +1,4 @@
+PRELIMINARY
 SYNOPSIS
         int tls_init_connection(object ob)
 
