@@ -63,12 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 474)
-(Parent-Version lpmud 3-3 473)
-(Version-Log "Corrected compilation errors in the TLS code.")
+(Project-Version lpmud 3-3 475)
+(Parent-Version lpmud 3-3 474)
+(Version-Log "The TLS key and certfile can be specified on the commandline.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 08 Aug 2003 20:29:02 -0600")
+(Checkin-Time "Sat, 09 Aug 2003 21:41:53 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -106,8 +106,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.537 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.330 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.538 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.331 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -199,7 +199,7 @@
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.58 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.45 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.46 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.73 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
@@ -265,14 +265,14 @@
   (src/pkg-alists.h (lpmud/l/39_pkg-alists 1.3 644))
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.1 644))
   (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.3 644))
-  (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.20 644))
+  (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.21 644))
   (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.4 644))
   (src/pkg-pcre.h (lpmud/a/b/7_pkg-pcre.h 1.1 644))
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.1 644))
-  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.1 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.2 644))
+  (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.2 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.3 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
@@ -310,7 +310,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.2 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.17 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.18 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.11 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.6 644))
@@ -963,7 +963,7 @@
   (doc/concepts/pgsql (lpmud/d/b/43_pgsql 1.1 644))
   (doc/concepts/rtfm (lpmud/n/39_rtfm 1.1 644))
   (doc/concepts/simul_efun (lpmud/n/40_simul_efun 1.2 644))
-  (doc/concepts/tls (lpmud/e/b/13_tls 1.1 644))
+  (doc/concepts/tls (lpmud/e/b/13_tls 1.2 644))
   (doc/concepts/uids (lpmud/n/41_uids 1.8 644))
 
   (doc/driver/codestyle (lpmud/h/1_codestyle 1.4 644))
@@ -971,7 +971,7 @@
   (doc/driver/debugmalloc (lpmud/n/42_debugmallo 1.3 644))
   (doc/driver/driver (lpmud/n/43_driver 1.2 644))
   (doc/driver/dumpallobj (lpmud/n/44_dumpallobj 1.6 644))
-  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.15 644))
+  (doc/driver/invocation (lpmud/f/38_invocation 1.14.1.16 644))
   (doc/driver/malloc (lpmud/n/45_malloc 1.3 644))
   (doc/driver/opcdump (lpmud/n/46_opcdump 1.3 644))
   (doc/driver/predefined (lpmud/h/8_predefined 1.12.1.22 644))
@@ -1238,11 +1238,11 @@
   (doc/efun/this_player (lpmud/q/42_this_playe 1.4 644))
   (doc/efun/throw (lpmud/q/43_throw 1.3 644))
   (doc/efun/time (lpmud/q/44_time 1.1.1.5 644))
-  (doc/efun/tls_deinit_connection (lpmud/e/b/14_tls_deinit 1.1 644))
-  (doc/efun/tls_error (lpmud/e/b/15_tls_error 1.1 644))
-  (doc/efun/tls_init_connection (lpmud/e/b/16_tls_init_c 1.1 644))
-  (doc/efun/tls_query_connection_info (lpmud/e/b/17_tls_query_ 1.1 644))
-  (doc/efun/tls_query_connection_state (lpmud/e/b/18_tls_query_ 1.1 644))
+  (doc/efun/tls_deinit_connection (lpmud/e/b/14_tls_deinit 1.2 644))
+  (doc/efun/tls_error (lpmud/e/b/15_tls_error 1.2 644))
+  (doc/efun/tls_init_connection (lpmud/e/b/16_tls_init_c 1.2 644))
+  (doc/efun/tls_query_connection_info (lpmud/e/b/17_tls_query_ 1.2 644))
+  (doc/efun/tls_query_connection_state (lpmud/e/b/18_tls_query_ 1.2 644))
   (doc/efun/to_array (lpmud/q/45_to_array 1.6 644))
   (doc/efun/to_float (lpmud/q/46_to_float 1.4 644))
   (doc/efun/to_int (lpmud/q/47_to_int 1.7 644))
